--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,20 @@
 CFLAGS = -std=c11 -Wall -Wextra -g -O2 -pedantic
 CPPFLAGS = -I../include -DDEBUG
 
-EXE = sudoku
+EXE = sudoku colors
 
-all: sudoku
+all: sudoku colors
 
 sudoku: sudoku.o
 	$(CC) $(CFLAGS) -o $@ $< ;
 
 sudoku.o: sudoku.c sudoku.h 
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< ;
+
+colors: colors.o
+	$(CC) $(CFLAGS) -o $@ $<;
+
+colors.o: colors.c ../include/colors.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< ;
 
 clean:
