Homeword3, Part2: projet hierarchy

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CFLAGS = -std=c11 -Wall -Wextra -g -O2 -pedantic
 CPPFLAGS = -I../include -DDEBUG
 
-EXE = sudoku colors
+EXE = sudoku colors grid
 
-all: sudoku colors
+all: sudoku colors grid
 
 sudoku: sudoku.o
 	$(CC) $(CFLAGS) -o $@ $< ;
@@ -15,6 +15,12 @@ colors: colors.o
 	$(CC) $(CFLAGS) -o $@ $<;
 
 colors.o: colors.c ../include/colors.h
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< ;
+
+grid: grid.o 
+	$(CC) $(CFLAGS) -o $@ $< ;
+
+grid.o: grid.c ../include/grid.h 
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< ;
 
 clean:
