HomeWork3: Makefile for tests

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,26 +1,20 @@
 CFLAGS = -std=c11 -Wall -Wextra -g -O2 -pedantic
 CPPFLAGS = -I../include -DDEBUG
 
-EXE = sudoku colors grid
+EXE = sudoku 
 
-all: sudoku colors grid
+all: sudoku grid.o
 
-sudoku: sudoku.o
-	$(CC) $(CFLAGS) -o $@ $< ;
+sudoku: sudoku.o colors.o
+	$(CC) $(CFLAGS) -o $@ $^ ;
 
-sudoku.o: sudoku.c sudoku.h 
+sudoku.o: sudoku.c sudoku.h ../include/grid.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< ;
-
-colors: colors.o
-	$(CC) $(CFLAGS) -o $@ $<;
 
 colors.o: colors.c ../include/colors.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< ;
 
-grid: grid.o 
-	$(CC) $(CFLAGS) -o $@ $< ;
-
-grid.o: grid.c ../include/grid.h 
+grid.o: grid.c ../include/grid.h ../include/colors.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< ;
 
 clean:
