--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,13 @@
 CFLAGS = -std=c11 -Wall -Wextra -g -O2 -pedantic
 CPPFLAGS = -I../include -DDEBUG
+LDFLAGS=
 
 EXE = sudoku 
 
 all: sudoku grid.o
 
 sudoku: sudoku.o colors.o
-	$(CC) $(CFLAGS) -o $@ $^ ;
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS);
 
 sudoku.o: sudoku.c sudoku.h ../include/grid.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< ;
